rust/dparser_lib/src/bindings.rs

pub type d_voidp = *mut ::std::os::raw::c_void;
pub type D_SyntaxErrorFn = ::std::option::Option<unsafe extern "C" fn(arg1: *mut D_Parser)>;
pub type D_AmbiguityFn = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: *mut D_Parser,
        n: ::std::os::raw::c_int,
        v: *mut *mut D_ParseNode,
    ) -> *mut D_ParseNode,
>;
pub type D_FreeNodeFn = ::std::option::Option<unsafe extern "C" fn(d: *mut D_ParseNode)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_Parser {
    pub initial_globals: *mut ::std::os::raw::c_void,
    pub initial_white_space_fn: D_WhiteSpaceFn,
    pub initial_scope: *mut D_Scope,
    pub syntax_error_fn: D_SyntaxErrorFn,
    pub ambiguity_fn: D_AmbiguityFn,
    pub free_node_fn: D_FreeNodeFn,
    pub loc: d_loc_t,
    pub start_state: ::std::os::raw::c_int,
    pub sizeof_user_parse_node: ::std::os::raw::c_int,
    pub save_parse_tree: ::std::os::raw::c_int,
    pub dont_compare_stacks: ::std::os::raw::c_int,
    pub dont_fixup_internal_productions: ::std::os::raw::c_int,
    pub fixup_EBNF_productions: ::std::os::raw::c_int,
    pub dont_merge_epsilon_trees: ::std::os::raw::c_int,
    pub dont_use_height_for_disambiguation: ::std::os::raw::c_int,
    pub dont_use_greediness_for_disambiguation: ::std::os::raw::c_int,
    pub dont_use_deep_priorities_for_disambiguation: ::std::os::raw::c_int,
    pub commit_actions_interval: ::std::os::raw::c_int,
    pub error_recovery: ::std::os::raw::c_int,
    pub partial_parses: ::std::os::raw::c_int,
    pub syntax_errors: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_Parser"][::std::mem::size_of::<D_Parser>() - 136usize];
    ["Alignment of D_Parser"][::std::mem::align_of::<D_Parser>() - 8usize];
    ["Offset of field: D_Parser::initial_globals"]
        [::std::mem::offset_of!(D_Parser, initial_globals) - 0usize];
    ["Offset of field: D_Parser::initial_white_space_fn"]
        [::std::mem::offset_of!(D_Parser, initial_white_space_fn) - 8usize];
    ["Offset of field: D_Parser::initial_scope"]
        [::std::mem::offset_of!(D_Parser, initial_scope) - 16usize];
    ["Offset of field: D_Parser::syntax_error_fn"]
        [::std::mem::offset_of!(D_Parser, syntax_error_fn) - 24usize];
    ["Offset of field: D_Parser::ambiguity_fn"]
        [::std::mem::offset_of!(D_Parser, ambiguity_fn) - 32usize];
    ["Offset of field: D_Parser::free_node_fn"]
        [::std::mem::offset_of!(D_Parser, free_node_fn) - 40usize];
    ["Offset of field: D_Parser::loc"][::std::mem::offset_of!(D_Parser, loc) - 48usize];
    ["Offset of field: D_Parser::start_state"]
        [::std::mem::offset_of!(D_Parser, start_state) - 80usize];
    ["Offset of field: D_Parser::sizeof_user_parse_node"]
        [::std::mem::offset_of!(D_Parser, sizeof_user_parse_node) - 84usize];
    ["Offset of field: D_Parser::save_parse_tree"]
        [::std::mem::offset_of!(D_Parser, save_parse_tree) - 88usize];
    ["Offset of field: D_Parser::dont_compare_stacks"]
        [::std::mem::offset_of!(D_Parser, dont_compare_stacks) - 92usize];
    ["Offset of field: D_Parser::dont_fixup_internal_productions"]
        [::std::mem::offset_of!(D_Parser, dont_fixup_internal_productions) - 96usize];
    ["Offset of field: D_Parser::fixup_EBNF_productions"]
        [::std::mem::offset_of!(D_Parser, fixup_EBNF_productions) - 100usize];
    ["Offset of field: D_Parser::dont_merge_epsilon_trees"]
        [::std::mem::offset_of!(D_Parser, dont_merge_epsilon_trees) - 104usize];
    ["Offset of field: D_Parser::dont_use_height_for_disambiguation"]
        [::std::mem::offset_of!(D_Parser, dont_use_height_for_disambiguation) - 108usize];
    ["Offset of field: D_Parser::dont_use_greediness_for_disambiguation"]
        [::std::mem::offset_of!(D_Parser, dont_use_greediness_for_disambiguation) - 112usize];
    ["Offset of field: D_Parser::dont_use_deep_priorities_for_disambiguation"]
        [::std::mem::offset_of!(D_Parser, dont_use_deep_priorities_for_disambiguation) - 116usize];
    ["Offset of field: D_Parser::commit_actions_interval"]
        [::std::mem::offset_of!(D_Parser, commit_actions_interval) - 120usize];
    ["Offset of field: D_Parser::error_recovery"]
        [::std::mem::offset_of!(D_Parser, error_recovery) - 124usize];
    ["Offset of field: D_Parser::partial_parses"]
        [::std::mem::offset_of!(D_Parser, partial_parses) - 128usize];
    ["Offset of field: D_Parser::syntax_errors"]
        [::std::mem::offset_of!(D_Parser, syntax_errors) - 132usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_ParseNode {
    pub symbol: ::std::os::raw::c_int,
    pub start_loc: d_loc_t,
    pub end: *mut ::std::os::raw::c_char,
    pub end_skip: *mut ::std::os::raw::c_char,
    pub scope: *mut D_Scope,
    pub user: d_voidp,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_ParseNode"][::std::mem::size_of::<D_ParseNode>() - 72usize];
    ["Alignment of D_ParseNode"][::std::mem::align_of::<D_ParseNode>() - 8usize];
    ["Offset of field: D_ParseNode::symbol"][::std::mem::offset_of!(D_ParseNode, symbol) - 0usize];
    ["Offset of field: D_ParseNode::start_loc"]
        [::std::mem::offset_of!(D_ParseNode, start_loc) - 8usize];
    ["Offset of field: D_ParseNode::end"][::std::mem::offset_of!(D_ParseNode, end) - 40usize];
    ["Offset of field: D_ParseNode::end_skip"]
        [::std::mem::offset_of!(D_ParseNode, end_skip) - 48usize];
    ["Offset of field: D_ParseNode::scope"][::std::mem::offset_of!(D_ParseNode, scope) - 56usize];
    ["Offset of field: D_ParseNode::user"][::std::mem::offset_of!(D_ParseNode, user) - 64usize];
};
unsafe extern "C" {
    pub fn new_D_Parser(
        t: *mut D_ParserTables,
        sizeof_ParseNode_User: ::std::os::raw::c_int,
    ) -> *mut D_Parser;
}
unsafe extern "C" {
    pub fn free_D_Parser(p: *mut D_Parser);
}
unsafe extern "C" {
    pub fn dparse(
        p: *mut D_Parser,
        buf: *mut ::std::os::raw::c_char,
        buf_len: ::std::os::raw::c_int,
    ) -> *mut D_ParseNode;
}
unsafe extern "C" {
    pub fn free_D_ParseNode(p: *mut D_Parser, pn: *mut D_ParseNode);
}
unsafe extern "C" {
    pub fn free_D_ParseTreeBelow(p: *mut D_Parser, pn: *mut D_ParseNode);
}
unsafe extern "C" {
    pub fn d_get_number_of_children(pn: *mut D_ParseNode) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn d_get_child(pn: *mut D_ParseNode, child: ::std::os::raw::c_int) -> *mut D_ParseNode;
}
unsafe extern "C" {
    pub fn d_find_in_tree(pn: *mut D_ParseNode, symbol: ::std::os::raw::c_int) -> *mut D_ParseNode;
}
unsafe extern "C" {
    pub fn d_ws_before(p: *mut D_Parser, pn: *mut D_ParseNode) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn d_ws_after(p: *mut D_Parser, pn: *mut D_ParseNode) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn d_pass(p: *mut D_Parser, pn: *mut D_ParseNode, pass_number: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn resolve_amb_greedy(
        dp: *mut D_Parser,
        n: ::std::os::raw::c_int,
        v: *mut *mut D_ParseNode,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn d_dup_pathname_str(str_: *const ::std::os::raw::c_char) -> *mut ::std::os::raw::c_char;
}

pub const NO_DPN: *mut D_ParseNode = 1 as *mut D_ParseNode;
